--- a/includes/style.css
+++ b/includes/style.css
@@ -1,105 +1,122 @@
-body {
-    background: url("https://madeinvilnius.lt/wp-content/uploads/2017/05/bananas-698608_1280.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    /*padding: 1% 0;*/
-}
-
-.bg2 {
-    background-color: white;
-    padding: 1%;
-    border-radius: 10px;
-}
-
 footer {
     padding: 1% 0;
     margin-top: 1%;
-    background-color: white;
+    background-color: #e3e7ed;
     text-align: center;
 }
 
-div {
+main {
+    padding-top: 1%;
     width: 50%;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    text-align: justify;
 }
 
-nav {
-    text-align: right;
+#list {
+    list-style-type: none;
+    padding: 0;
+    color: blue;
 }
 
-.img1 {
-    width: 350px;
-    height: 250px;
+input {
+    width: 100%;
+    margin-bottom: 2%;
+}
+
+textarea {
+    width: 100%;
+    resize: none;
+}
+
+h2::before {
+    content: "\269d";
+}
+
+
+main section {
+    padding: 1% 1%;
+}
+
+#imgb {
+    width: 50%;
+    height: 20%;
     float: left;
-    padding: 0 10px 10px 0;
+    padding-right: 3%;
+    padding-bottom: 6%;
 }
 
 header div {
+    width: 50%;
+    margin: 0 auto;
+    padding: 1% 0;
+    background-color: #adcc14;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-p {
-    text-align: justify;
-}
-
 nav a {
-    padding-left: 2em;
+    padding-right: 1.2em;
     color: black;
-    font-size: 1.3em;
+    font-size: 1.1em;
+    text-decoration: none;
 }
 
-header div img {
-    width: 70px;
-    height: 70px;
+#imga {
+    width: 15%;
+    height: 15%;
+    float: left;
+    padding-right: 1%;
 }
 
-header {
-    margin: 0 0 1% 0;
-    background-color: white;
+main section p:last-child {
+    padding: 1%;
+}
+main section a {
+    color: white;
+    padding: 3%;
+    text-decoration: none;
+    background-color: #adcc14;
 }
 
-span {
-    color: green;
+main section div img {
+    width: 100%;
+    height: 50%;
 }
+
+main section div {
+    text-align: right;
+}
+
+.flexa, .flexc {
+    flex: 2;
+}
+
+.flexb, .flexd {
+    flex: 3;
+}
+
+aside li:nth-child(1):before {
+    content: "\260f";
+    color: black;
+}
+
+aside li:nth-child(2):before {
+    content: "\2709;";
+    color: black;
+}
+
+aside li:nth-child(3):before {
+    content: "\2656";
+    color: black;
+}
+
 
 button {
-    margin-top: 4%;
-    margin-bottom: 5%;
-    padding: 1% 15%;
+    background-color: #adcc14;
     color: white;
-    background-color: green;
+    padding: 4%;
     border: none;
-}
-
-input {
-    width: 100%;
-    color: darkgrey;
-    padding: 1% 1%;
-    margin-bottom: 1%;
-}
-
-textarea {
-    padding: 1% 1%;
-    width: 100%;
-    max-width: 100%;
-    min-width: 100%;
-}
-
-td:first-child{
-    color: green;
-    font-weight: bold;
-}
-
-table, th, td, tr {
-    text-align: center;
-    border: 1px solid #ccced1;
-    border-collapse: collapse;
-
-}
-
-table {
-    width: 100%;
 }
