--- a/includes/style.css
+++ b/includes/style.css
@@ -1,127 +1,166 @@
-.ops p:first-child {
-    color: red;
-    font-family: Arial;
-}
-
-.ops p:nth-child(2) {
-    color: blue;
-    font-family: Arial;
-}
-
-.ops p:last-child {
-    color: green;
-    font-family: Arial;
-}
-
-footer p:first-child {
-    background-color: red;
-    font-family: "Comic Sans";
-}
-
-footer p:nth-child(2) {
-    background-color: blue;
-    font-family: "Comic Sans";
-}
-
-footer p:last-child {
-    background-color: green;
-    font-family: "Comic Sans";
-}
-
-.head {
-    background-color: #f9bbe4;
-}
-
-.head div {
-    width: 50%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.imga {
-    width: 100px;
-}
-
-.navi a:not(:last-child) {
-    padding-right: 10px;
-    color: red;
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.container article {
-    width: 48%;
-    margin: 1%;
-    border: 1px solid black;
-    box-sizing: border-box;
-}
-
-/*sekantis page home*/
+/*Navigacija*/
 
 body {
-    background-color: #1BBC9B;
-    font-family: Arial;
+    font-family: 'Roboto', sans-serif;
 }
 
-header div {
+.wraper {
+    max-width: 960px;
     margin: 0 auto;
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #B9B9B9;
-
 }
 
 header {
-    background-color: #F7F7F7;
+    background-color: #DBDEE5;
 }
 
-nav a:not(:last-child) {
-    padding-right: 15px;
+.flexone {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-main {
-    margin: 0 auto;
-    width: 60%;
+.flextwo {
+    display: flex;
+    justify-content: space-between;
+}
+
+.flexthree {
+    display: flex;
+}
+
+
+.navi a:not(:last-child) {
+    text-decoration: none;
+    color: #F85059;
+    margin-right: 20px;
+}
+
+.navi a:hover {
+    text-decoration: underline;
+}
+
+.navi a {
+    text-decoration: none;
+    color: #F85059;
+}
+
+.imga {
+    max-height: 45px;
+    width: auto;
+    padding: 5px 0;
+}
+
+/*moto img section*/
+
+.imgb {
+    height: 60%;
+    max-height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.relative {
+    position: relative;
+}
+
+.absolute {
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    background-color: rgba(243,11,22, 0.5);
+    padding: 1%;
+}
+
+/*main 1st section*/
+
+h2 {
+    color: #F85059;
+    padding-top: 10px;
+}
+
+span {
+    color: #F30B16;
+}
+
+.imgc {
+    width: 150px;
+    height: 100px;
+    object-fit: cover;
+}
+
+.borders {
+    border: 1px solid #DBDEE5;
+    background-color: #F3F6F8;
+    padding: 10px;
     text-align: center;
+    max-width: 24%;
+
 }
 
-main h1, main h2 {
-    text-align: center;
-    color: #fff;
+.borders:not(:last-child) {
+    margin-right: 10px;
 }
 
-main img {
-    border-radius: 50%;
+
+h3:before {
+    content: "\2666";
+    padding-right: 10px;
 }
 
-section {
-    background-color: #484E5E;
-    text-align: center;
-    color: #fff;
-    padding: 2% 0;
+p {
+    text-align: justify;
+    color: #444;
+    font-size: 0.9em;
 }
 
-button {
-    background-color: white;
-    color: #ADADAF;
-    border-radius: 5px;
-    border: none;
+/*main 2nd section*/
+
+.flx {
+    flex: 1;
+}
+
+form {
+    margin-right: 5px;
+}
+
+input {
+    padding: 10px;
+    color: grey;
+    margin-bottom: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+textarea {
+    overflow: visible;
+    width: 100%;
+    max-width: 100%;
+    color: grey;
+    min-height: 100px;
+    box-sizing: border-box;
+    resize: vertical;
     padding: 10px;
 }
 
-button:before {
-    content: "\1F50D";
+button {
+    margin-top: 10px;
+    border: 1px solid red;
+    padding: 2% 3%;
+    background-color: white;
 }
 
-section p {
-    width: 60%;
-    margin: 0 auto;
-    padding-bottom: 1% ;
+.imgd {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/*Copyright*/
+
+footer {
+    background-color: #DBDEE5;
+    color: #FFF;
+    text-align: center;
+    padding: 1% 0;
+    margin-top: 0.5%;
 }
