--- a/includes/style.css
+++ b/includes/style.css
@@ -1,166 +1,124 @@
-/*Navigacija*/
+/*Info apie Hraley*/
 
-body {
-    font-family: 'Roboto', sans-serif;
+* {
+    font-family: 'fjalla One', sens-serif;
+}
+
+header, main {
+    background-color: black;
 }
 
 .wraper {
-    max-width: 960px;
+    max-width: 700px;
     margin: 0 auto;
 }
 
-header {
-    background-color: #DBDEE5;
-}
-
-.flexone {
+.flx {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-}
-
-.flextwo {
-    display: flex;
     justify-content: space-between;
 }
 
-.flexthree {
+.flx2 {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
 }
 
-
-.navi a:not(:last-child) {
-    text-decoration: none;
-    color: #F85059;
-    margin-right: 20px;
+.flx3 {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
-.navi a:hover {
-    text-decoration: underline;
+.imga {
+    padding: 0 1em;
+    width: auto;
+    height: 10vh;
+}
+
+.p-size {
+    padding: 0 1em;
+    color: white;
+    font-size: 1.8em;
+}
+
+/*Navigacija*/
+
+.bg {
+    background-color: #323232;
 }
 
 .navi a {
     text-decoration: none;
-    color: #F85059;
+    color: white;
+    padding: 0 1em;
 }
 
-.imga {
-    max-height: 45px;
-    width: auto;
-    padding: 5px 0;
+.navi {
+    text-align: center;
+    padding: 1em 0;
 }
 
-/*moto img section*/
-
-.imgb {
-    height: 60%;
-    max-height: 100%;
-    width: 100%;
-    object-fit: cover;
+.scroll {
+    position: sticky;
+    top: 0;
 }
 
-.relative {
-    position: relative;
+/*main 1st sekcija*/
+
+.bg2 {
+    background-image: url("../images/harley.jpg");
+    min-height: 60vh;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
-.absolute {
-    right: 0;
-    bottom: 0;
-    position: absolute;
-    background-color: rgba(243,11,22, 0.5);
-    padding: 1%;
+.borders p:not(:last-child) {
+    text-indent: 30px;
 }
 
-/*main 1st section*/
-
-h2 {
-    color: #F85059;
-    padding-top: 10px;
-}
-
-span {
-    color: #F30B16;
-}
-
-.imgc {
-    width: 150px;
-    height: 100px;
-    object-fit: cover;
+.borders p:last-child {
+    text-align: center;
 }
 
 .borders {
-    border: 1px solid #DBDEE5;
-    background-color: #F3F6F8;
-    padding: 10px;
-    text-align: center;
-    max-width: 24%;
-
-}
-
-.borders:not(:last-child) {
-    margin-right: 10px;
-}
-
-
-h3:before {
-    content: "\2666";
-    padding-right: 10px;
-}
-
-p {
-    text-align: justify;
-    color: #444;
-    font-size: 0.9em;
+    background-color: rgba(255,255,255,0.7);
+    width: 62%;
+    padding: 5vh;
 }
 
 /*main 2nd section*/
 
-.flx {
-    flex: 1;
-}
-
-form {
-    margin-right: 5px;
-}
-
-input {
-    padding: 10px;
-    color: grey;
-    margin-bottom: 10px;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-textarea {
-    overflow: visible;
-    width: 100%;
+.hrly {
     max-width: 100%;
-    color: grey;
-    min-height: 100px;
-    box-sizing: border-box;
-    resize: vertical;
+    width: 200px;
+    height: auto;
+}
+
+.borders2 {
+    background-color: darkgrey;
+    border-radius: 5%;
+    margin: 2em;
     padding: 10px;
-}
+    font-size: 0.9em;
+    text-align: justify;
+    width: 50vh;
+    max-width: 300px;
 
-button {
-    margin-top: 10px;
-    border: 1px solid red;
-    padding: 2% 3%;
-    background-color: white;
 }
-
-.imgd {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+main section div div{
+    text-align: center;
 }
-
-/*Copyright*/
+/*footer*/
 
 footer {
-    background-color: #DBDEE5;
-    color: #FFF;
+    background-color: #323232;
+    padding: 1em 0;
+    color: white;
     text-align: center;
-    padding: 1% 0;
-    margin-top: 0.5%;
 }
