--- a/includes/style.css
+++ b/includes/style.css
@@ -1,23 +1,264 @@
-.container {
-    width: 1000px;
-    margin: 0 auto;
+
+/*header section Navigation bar*/
+
+* {
+    font-family: 'Open Sans', sans-serif;
 }
+
+.background {
+    background: #7d74b0;
+    color: white;
+}
+
+.center {
+    text-align: center;
+}
+
+.background nav a {
+    display: block;
+    font-size: 1.5em;
+    text-decoration: none;
+    color: white;
+    padding-bottom: 10px;
+}
+
+/*!*background odd and even colors */
+
+.background2:nth-child(odd) {
+    background: #2e3450;
+    color: white;
+}
+
+.background2:nth-child(even) {
+    background: #2a2f4a;
+    color: white;
+}
+
+/*borderiai*/
+
+.border {
+    border-bottom: 1px solid white;
+    padding-bottom: 15px;
+}
+
+.border2 {
+    border-bottom: 1px solid white;
+    display: inline-block;
+    padding-right: 15px;
+}
+
+/*All imgaes*/
+
+.imga {
+    width: 78vh;
+}
+
+.imgb{
+    background-image: url("https://cdn.pixabay.com/photo/2017/11/06/20/09/abstract-2924732_960_720.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 35vh;
+    max-height: 50vh;
+}
+
+/*Pull off from sides*/
+
+.retract2 {
+    padding: 40px 40px;
+}
+
+.retract{
+    padding: 40px 20px;
+}
+
+/*Form about adding an employee*/
+
+form {
+    margin: 0;
+}
+
+.inputconfig {
+    background: #2e3450;
+    width: 100%;
+    padding: 15px 20px;
+    border: none;
+    margin-bottom: 5vh;
+    box-sizing: border-box;
+}
+
+label {
+    text-transform: uppercase;
+}
+
+textarea {
+    background: #2e3450;
+    width: 100%;
+    padding: 15px 20px;
+    margin-bottom: 5vh;
+    border: none;
+    max-width: 100%;
+    min-width: 100%;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+button {
+    background: #2a2f4a;
+    padding: 20px;
+    color: white;
+    border: none;
+    border: 2px solid white;
+}
+
+.bottun2 {
+    background: none;
+    border: 2px solid white;
+    text-transform: uppercase;
+    color: white;
+    padding: 1em;
+    cursor: pointer;
+}
+
+section form div h2 {
+    font-size: 1.5em;
+}
+/*table to add employees*/
+
+table, tr, td, th {
+    padding: 2vh;
+    border-collapse: collapse;
+    color: white;
+}
+
+table, th, td {
+    border: 1px solid rgba(212, 212, 255, 0.035);
+}
+
 table {
     width: 100%;
-    margin-top: 50px;
+    text-align: center;
 }
-table, tr, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    padding: 10px;
+
+tr:first-child {
+    background: rgba(125, 116, 176, 0.1);
 }
-@media only screen and (max-width: 700px) {
-    .container {
-        max-width: 700px;
+
+tr:nth-child(even) {
+    background: rgba(42,47,74,0.3);
+}
+
+.inline {
+    display: inline-block;
+}
+
+.inline2 {
+    vertical-align: top;
+    display: inline-block;
+    padding-right: 5vh;
+    padding-top: 2vh;
+
+}
+
+h3 {
+    margin-top: 0;
+    font-size: 1.5em;
+}
+
+.sizing {
+    margin-bottom: 5vh;
+    border-bottom: 1px solid rgba(212, 212, 255, 0.035);
+    padding-bottom: 5vh;
+}
+
+.icon {
+    background-color: rgba(125, 116, 176, 0.1);
+    border-radius: 100%;
+    height: 2.1em;
+    padding: 20px 20px 5px 20px;
+    margin-right: 1.5em;
+    text-align: center;
+}
+
+/*footer*/
+
+footer {
+    text-align: center;
+    background: #7d74b0;
+    color: white;
+    padding: 3vh;
+}
+
+@media only screen and (min-width: 1000px) {
+    header {
+        position: sticky;
+        top: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 2em;
     }
-    input {
-        width: 100%;
-        margin-bottom: 20px;
-        box-sizing: border-box;
+    .background nav a {
+        display: inline-block;
+        margin-left: 1.5em;
+        font-size: 1.2em;
+        padding-top: 0.6em;
+    }
+    .background nav a:hover {
+        text-decoration: underline;
+    }
+    .background nav a:first-child {
+        margin-left: 0;
+    }
+    .imga {
+        max-width: 200px;
+    }
+    .imgb {
+        min-height: 500px;
+    }
+    .wrapper {
+        margin: 0 auto;
+        width: 800px;
+    }
+    .height {
+        padding: 20vh 0;
+    }
+    .border {
+        font-size: 1.5em;
+    }
+    section div p {
+        font-size: 0.8em;
+    }
+    .flex:nth-child(even) {
+        display: flex;
+        flex-direction: row-reverse;
+    }
+    .flex {
+        display: flex;
+        flex-direction: row;
+    }
+    .flex2 {
+        flex: 3;
+    }
+    .flex3 {
+        flex: 2;
+    }
+    .flex4 {
+        display: flex;
+    }
+    .flex5 {
+        flex: 1;
+    }
+    .retract {
+        padding-top: 190px;
+        padding-left: 40px;
+        font-size: 0.9em;
+    }
+    button:hover, input[type=submit]:hover, input[type=reset]:hover {
+        border: 2px solid rgb(151, 112, 176);
+        color: rgb(151, 112, 176);
+    }
+    textarea {
+        resize: vertical;
     }
 }
